# container-native-fs-interposer

./: .gitmodules  README.md  flake.nix  helmfile.yaml
.github/workflows/: release.yml  test.yml
FUSE1/: FUSE_ll.c  FUSE_ll.cpp  Makefile  note
cpp_hp_fuse/: Makefile  TockenBucket.hpp  TokenBucket.hpp  TokenBucket_ts.cc  passthrough_hp.cc
csi/: Cargo.toml  build.rs
csi/src/: config.rs  controller.rs  identity.rs  lib.rs  main.rs  node.rs
deploy/: csidriver.yaml  daemonset.yaml  deployment.yaml  driver.yaml  grafana.yaml  jaeger.yaml  kustomization.yaml
examples/: basic.yaml  coreutils.yaml  fio-throttled.yaml  fio.yaml  kustomization.yaml  minio.yaml  postgres.yaml
fuse/: README.md  basic_passthrough.c  faulty_delay.cc  faulty_delay.h  interposer.cc  meson.build  nop.cc  nop.h  passthrough_hp.cc  workload_tracing.c  workload_tracing.cpp  workload_tracing.h
fuse-ll/: meson.build  passthrough.c  passthrough_helpers.h
fuse-ll/passthrough_ll/: Cargo.toml  wrapper.h
fuse-ll/passthrough_ll/src/: bridge.rs  descriptor_utils.rs  file_traits.rs  filesystem.rs  fs_cache_req_handler.rs  fuse2.rs  idmap.rs  lib.rs  lib3.rs  limits.rs  oslib.rs  read_dir.rs  sandbox.rs  seccomp.rs  server.rs  util.rs
fuse-ll/passthrough_ll/src/passthrough/: file_handle.rs  inode_store.rs  mod.rs  util.rs
fuse-ll/passthrough_ll/src/passthrough/device_state/: deserialization.rs  mod.rs  serialization.rs  serialized.rs
fuse-ll/passthrough_ll/src/passthrough/device_state/preserialization/: find_paths.rs  mod.rs
fuse-rust/: Cargo.toml  build.rs  wrapper.h
fuse-rust/src/: lib.rs  nop.rs
fuse/config/: config.json  docker-compose.yaml  prometheus.yml
fuse/faultyanddelayed_lowlevel/: Dockerfile  faulty_ll.c  fuse-faulty.yaml  meson.build  test.c
fuse/faultyanddelayed_lowlevel/libfuse/: fuse-3.16.2.tar.gz.sig
fuse/faultydelay_ll_cpp/: Dockerfile  README.md  faulty_ll.cpp  faulty_ll.hpp  test.cpp
fuse/faultydelay_ll_cpp/config/: config.json
fuse/faultydelay_ll_cpp/include/: config_parser.cpp
fuse/include/: TockenBucket.hpp  config_parser.cpp  config_parser.hpp  fault_injection.cpp  fault_injection.hpp  metric_collection.cpp  metric_collection.hpp  otel.cpp  otel.hpp  passthrough_hp.cc  passthrough_hp.hpp  workload_tracing.cpp  workload_tracing.hpp
fuse/passthrough/: make.py  meson.build  passthrough.c  passthrough.cpp  passthrough.h
fuse/subprojects/: fuse3.wrap
helm/: Chart.yaml  values.yaml
helm/templates/: clusterrole.yaml  clusterrolebinding.yaml  csidriver.yaml  daemonset.yaml  grafana.yaml  grafanadashboard.yaml  grafanadatasource.yaml  jaeger.yaml  serviceaccount.yaml
