[package]
name = "container-native-fs-interposer"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { version = "0.29.0", features = ["mount"] }
prost = "0.13.2"
prost-types = "0.13.2"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
tonic = "0.12.2"

[build-dependencies]
tonic-build = "0.12.2"
