[package]
name = "container-native-fs-interposer"
version = "0.1.0"
edition = "2021"

[dependencies]
k8s-openapi = { version = "0.23.0", features = ["latest"] }
kube = { version = "0.96.0", features = ["runtime"] }
nix = { version = "0.29.0", features = ["mount"] }
prost = "0.13.2"
prost-types = "0.13.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
shlex = "1.3.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
tonic = "0.12.2"
uuid = { version = "1.10.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12.2"
