[package]
name = "passthrough_ll"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1.2"
capng = "0.2.2"
env_logger = "0.8.4"
futures = { version = "0.3", features = ["thread-pool"] }
libc = "0.2.155"
log = "0.4"
libseccomp-sys = "0.2"
clap = { version = "4", features = ["derive"] }
postcard = { version = "1.0", features = ["use-std"] }
serde = { version = "1.0", features = ["derive"] }
vhost-user-backend = "0.15.0"
vhost = "0.11.0"
virtio-bindings = "0.2.1"
vm-memory = { version = "0.14.1", features = ["backend-mmap", "backend-atomic"] }
virtio-queue = "0.12.0"
vmm-sys-util = "0.12.1"
syslog = "6.1"

[build-dependencies]
bindgen = "0.70"

[lib]
name = "passthrough_ll"
crate-type = ["cdylib"]